# lumenarch

./: .clippy.toml  .gitignore  .markdownlint.yaml  .mdlrc  .rustfmt.toml  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
docs/: ARCHLANG.md  CONCEPT.md  FIELDS.md  LOGISTICS.md  LUMENLANG.md  TECH_DESIGN.md  book.toml
notes/: 01_SHIP_DEMO_TODO.md  02_SYSTEMS_DEMO.md  03_LOGISTICS_DEMO.md  03_LOGISTICS_DEMO_TODO.md  04_ARCH_DEMO.md  04_ARCH_DEMO_TODO.md  05_COMPONENTS_DEMO.md  05_COMPONENTS_DEMO_TODO.md  06_TRAVEL_DEMO.md  06_TRAVEL_DEMO_TODO.md  07_HOSTILE_SHIPS_DEMO.md  07_HOSTILE_SHIPS_DEMO_TODO.md  08_BOARDING_DEMO.md  08_BOARDING_DEMO_TODO.md  09_BREACH_DEMO.md  09_BREACH_DEMO_TODO.md  10_UI_DEMO.md  10_UI_DEMO_TODO.md  11_BETTER_COMPONENTS_DEMO.md  11_BETTER_COMPONENTS_DEMO_TODO.md  12_MULTIPLAYER_DEMO.md  12_MULTIPLAYER_DEMO_TODO.md  13_LUMEN_DEMO.md  13_LUMEN_DEMO_TODO.md  14_PLAYER_DEMO.md  14_PLAYER_DEMO_TODO.md  15_ARCH_COMPLETE_DEMO.md  15_ARCH_COMPLETE_DEMO_TODO.md  16_STATIONS_DEMO.md  16_STATIONS_DEMO_TODO.md  17_ROGUE_CONTINUANTS_DEMO.md  17_ROGUE_CONTINUANTS_DEMO_TODO.md  18_GFX_DEMO.md  18_GFX_DEMO_TODO.md  19_DRONES_DEMO.md  19_DRONES_DEMO_TODO.md  20_AUTOMATION_DEMO.md  20_AUTOMATION_DEMO_TODO.md  20_OUTSTANDING_ISSUES.md  21_TUBES_DEMO.md  (+13 more)
saves/: balance_config.json  campaign_state.json  editor_ship.json  enemy_ships.json  sector_layout.json  stations.json
src/: balance.rs  campaign.rs  docked.rs  host.rs  lobby.rs  main.rs  menu.rs  net.rs  netcode.rs  protocol.rs  sector_map.rs  session.rs  sim_tests.rs  splash.rs  state.rs  stations.rs  (+1 more)
(+304 files in other folders)
