[package]
name = "lumenarch"
version = "0.1.0"
edition = "2024"

[dependencies]

# bevy
bevy = "0.18"

# rollback
bevy_roll_safe = "0.7"
bevy_ggrs = "0.21"
ggrs = "0.12"
bincode = "1.3"

# fixed-point
cordic = "0.1.5"
fixed = { version = "1.31", features = ["serde"] }

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["debug"]
debug = ["bevy/debug"]
